--- a/scss/_nicknamed.scss
+++ b/scss/_nicknamed.scss
@@ -16,7 +16,7 @@
 	}
 	.nicknamed-icon {
 		background: url('../img/nicknamed_icon.png') no-repeat;
-		z-index: 5;
+		z-index: 15;
 		position: fixed;
 		width: 70px;
 		height: 71px;
